[package]
name = "ump"
version = "1.0.2"
edition = "2021"
description = "Gestor de paquetes oficial para el lenguaje Umbral"
license = "MIT"
readme = "README.md"
repository = "https://github.com/hersac/ump"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1.0"

[package.metadata.deb]
maintainer = "Heri <heri@example.com>"
copyright = "2025, Heri"
license-file = ["LICENSE", "4"]
depends = "$auto"
section = "devel"
priority = "optional"
assets = [
    ["target/release/ump", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/ump/README.md", "644"],
]
